--- a/src/sec-intro.tex
+++ b/src/sec-intro.tex
@@ -27,19 +27,20 @@ GPUs. I am interested in exploring future systems that use a
 \emph{fine-grain intermingling} of many lightweight general-purpose cores
 and data-parallel accelerators unified through a common instruction set
 with support for \emph{seamless adaptive execution} of parallel tasks as
-shown in Figure~\ref{fig-intro-overview}.  \BF{This proposal outlines the
-  explicit-parallel-call (XPC) architecture, a novel fine-grain
-  heterogeneous architecture based on the concept of explicitly encoding
-  parallel tasks as parallel function calls in the software/hardware
-  interface.}  Many facets of the XPC architecture are inspired by my two
-papers published at top-tier conferences that focus on improving the
-performance and efficiency of both regular and irregular applications on
-general-purpose GPUs (GPGPUs). In particular, insights on reducing
-redundant computation and dynamic work redistribution guided the hardware
-design of the XPC architecture.  Figure~\ref{fig-intro-vision} highlights
-the vertically integrated approach that will be used to explore both
-software and hardware techniques for \emph{exposing}, \emph{executing},
-and \emph{scheduling} fine-grain parallel tasks.
+shown in Figure~\ref{fig-intro-overview}.  \BF{This thesis proposal
+  outlines the explicit-parallel-call (XPC) architecture, a novel
+  fine-grain heterogeneous architecture based on the concept of
+  explicitly encoding parallel tasks as parallel function calls in the
+  software/hardware interface.}  Many facets of the XPC architecture are
+inspired by my two papers published at top-tier conferences that focus on
+improving the performance and efficiency of both regular and irregular
+applications on general-purpose GPUs (GPGPUs). In particular, insights on
+reducing redundant computation and dynamic work redistribution will guide
+the hardware design of the XPC architecture.
+Figure~\ref{fig-intro-vision} highlights the vertically integrated
+approach that will be used to explore both software and hardware
+techniques for \emph{exposing}, \emph{executing}, and \emph{scheduling}
+fine-grain parallel tasks.
 
 %These accelerators would be specialized for a broad range of
 %\emph{amorphous data parallelism}, a generalized form of data parallelism
